5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1836_1276.log
== TEST (2019-07-01 20:43:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(7,dtype=int)
for j in range(7):
	m[j] = sum(v[;,j])
for j in range(7):
	if(m[j] == max(m)):
		print(j+1)
-- ERROR:
File "XXXX", line 11
    m[j] = sum(v[;,j])
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:43:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(7,dtype=int)
for j in range(7):
	m[j] = sum(v[:,j])
for j in range(7):
	if(m[j] == max(m)):
		print(j+1)
-- EXECUTION TIME:
0.98775
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:43:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(7,dtype=int)
for j in range(7):
	m[j] = sum(v[:,j])
for j in range(7):
	if(m[j] == max(m)):
		print(j+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:44:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(7,dtype=int)
for j in range(7):
	m[j] = sum(v[:,j])
for j in range(7):
	if(m[j] == max(m)):
	print(j+1)
-- EXECUTION TIME:
0.629688
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 14
    print(j+1)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:44:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(7,dtype=int)
for j in range(7):
	m[j] = sum(v[:,j])
for j in range(7):
	if(m[j] == max(m)):
	print(j+1)
-- ERROR:
File "XXXX", line 14
    print(j+1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:45:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(7,dtype=int)
for j in range(7):
	m[j] = sum(v[:,j])
for j in range(7):
	if(m[j] == max(m)):
		print(j+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:50:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

d = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	d[i] = sum(v[:,i])

for i in range(size(d)):
	if d[i] == max(d):
		print(i+1)
-- EXECUTION TIME:
1.29776
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:50:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

d = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	d[i] = sum(v[:,i])

for i in range(size(d)):
	if d[i] == max(d):
		print(i+1)
-- EXECUTION TIME:
1.10158
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:50:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

d = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	d[i] = sum(v[:,i])

for i in range(size(d)):
	if d[i] == max(d):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:50:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

d = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	d[i] = sum(v[:,i])

for i in range(size(d)):
	if d[i] == max(d):
		print(i+1
-- EXECUTION TIME:
0.791417
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 14
    
               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:50:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

d = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	d[i] = sum(v[:,i])

for i in range(size(d)):
	if d[i] == max(d):
		print(i+1)
-- EXECUTION TIME:
0.888207
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:52:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

d = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	d[i] = sum(v[:,i])

for i in range(size(d)):
	if d[i] == max(d):
		print(i+1)
-- EXECUTION TIME:
1.19291
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:52:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

d = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	d[i] = sum(v[:,i])

for i in range(size(d)):
	if d[i] == max(d):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:52:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

d = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	d[i] = sum(v[:,i])

for i in range(size(d)):
	if d[i] == max(d):
		print(i+1)
-- EXECUTION TIME:
0.759661
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:52:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

d = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	d[i] = sum(v[:,i])

for i in range(size(d)):
	if d[i] == max(d):
		print(i+1)
-- EXECUTION TIME:
1.01295
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:53:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

dba = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	dba[i] = sum(v[:,i])

for i in range(size(dba)):
	if dba[i] == max(dba):
		print(i+1)
-- EXECUTION TIME:
1.05536
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:53:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

dba = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	dba[i] = sum(v[:,i])

for i in range(size(dba)):
	if dba[i] == max(dba):
		print(i+1)
-- EXECUTION TIME:
0.87196
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:53:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

dba = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	dba[i] = sum(v[:,i])

for i in range(size(dba)):
	if dba[i] == max(dba):
		print(i+1)
-- EXECUTION TIME:
1.16231
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:53:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array(eval(input("v: ")))

dba = zeros(shape(v)[1], dtype=int)

for i in range(shape(v)[1]):
	dba[i] = sum(v[:,i])

for i in range(size(dba)):
	if dba[i] == max(dba):
		print(i+1)
-- EXECUTION TIME:
0.972008
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
